	- to create perl libs
		perlbrew install --multi --64int --thread --notest perl-x.yy.z (add -Dcc=gcc on solaris)
		perlbrew switch perl-x.yy.z
		
		cpan Crypt::OpenSSL::RSA
		capn Crypt::Ed25519
		cpan CryptX
		
		with version number:
		
		cpan TODDR/Crypt-OpenSSL-RSA-0.30.tar.gz
		cpan MIK/CryptX-0.060.tar.gz
		(on Solaris, need to specify mirror -M https://cpan.metacpan.org)

0.107.1
 - notify for metadata update when receicing a progress indicator
 
0.107.0
 - silence frames count on http reconnect shall be 0 when already sending silence
 - limit packet recovery to max of rtp latency and http delay
 - misc network congestion corrections

0.106.0
 - (p) duration & position handling correction
 - (p) use 'load' on RECORD instead of 'play'
 - update util.h with extra metadata (airconnect backport)
 - disable http range response (LMS requests range with flac)
 - send silence frames as soon as playtime reached to ensure continuous HTTP stream
 - discriminate FLUSH send at start to clean pipe from FLUSH used to stop playback using RECORD values and timer
 - resend timeout was wrong (in http thread)
 - silence frames count on http reconnect shall be 0 when already sending silence
 - limit packet recovery to max of rtp latency and http delay
		
0.105.3
 - encode playername in hw_addr as well		

0.105.2
 - encode apname in utf8 before hashing & broadcasting
 
0.105.1
 - setting "all squeezelite" option was only working after "apply"
 
0.105.0
 - sort players by name
 
0.104.7
 - metadata was freed after ctx was released
 - backport AirConnect 0.2.3.0 modifications
 
0.104.6		
 - set length for silent frame now that length must be returned	

0.104.5
 - aesiv and aeskey can start with a '\0', use a decrypt explicit boolean
 
0.104.4
 - handle variable size alac packets
	
0.104.3
 - parse error in Intel CPUs Perl name
 
0.104.2 
 - update latency help 	
 - i686 build for Perl 5.18
 - directory names for elib where messed up ... again
 
0.104.0
 - add perl 5.28