@@ -17,7 +17,8 @@ note:
 		(on Solaris, need to specify mirror -M https://cpan.metacpan.org)
 
 0.107.1
- - notify for metadata update when receicing a progress indicator
+ - notify for metadata update when receiving a progress indicator
+ - set duration in metadata as well
  
 0.107.0
  - silence frames count on http reconnect shall be 0 when already sending silence
